--- a/contents/projects/nemethrichard.mdx
+++ b/contents/projects/nemethrichard.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'nemethrichard.hu'
-description: 'Nemeth Richard is a Hungarian composer, pianist and musicologist.'
+description: 'This is my personal website.'
 tags: ['next.js', 'react', 'sanity', 'tailwindcss']
 image: '/images/projects/puszafalat.jpg'
 liveUrl: 'https://nemethrichard.hu'
